--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="cake_donut">Cake Donut</string>
     <string name="donut_holes">Donut Holes</string>
     <string name="quantity_label">Quantity:</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="remove_from_cart">Remove Item</string>
+    <string name="add_to_order">Add to Order</string>
 </resources>
