--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="add_to_order">Add to Order</string>
     <string name="subtotal">Subtotal:</string>
     <string name="zero_subtotal">$0.00</string>
+    <string name="place_order">Place Order</string>
 </resources>
