--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="subtotal">Subtotal:</string>
     <string name="zero_subtotal">$0.00</string>
     <string name="place_order">Place Order</string>
+    <string name="short_size">Short</string>
+    <string name="tall_size">Tall</string>
+    <string name="grande_size">Grande</string>
+    <string name="venti_size">Venti</string>
+    <string name="caramel">Caramel</string>
+    <string name="cream">Cream</string>
+    <string name="milk">Milk</string>
+    <string name="syrup">Syrup</string>
+    <string name="whipped_cream">Whip Cream</string>
 </resources>
